src/qrack_system.rs

extern "C" {
    pub fn DIVN(
        sid: uintq,
        na: uintq,
        a: *mut uintq,
        m: *mut uintq,
        n: uintq,
        q: *mut uintq,
        o: *mut uintq,
    );
}
extern "C" {
    pub fn POWN(
        sid: uintq,
        na: uintq,
        a: *mut uintq,
        m: *mut uintq,
        n: uintq,
        q: *mut uintq,
        o: *mut uintq,
    );
}
extern "C" {
    pub fn MCMUL(
        sid: uintq,
        na: uintq,
        a: *mut uintq,
        nc: uintq,
        c: *mut uintq,
        n: uintq,
        q: *mut uintq,
        o: *mut uintq,
    );
}
extern "C" {
    pub fn MCDIV(
        sid: uintq,
        na: uintq,
        a: *mut uintq,
        nc: uintq,
        c: *mut uintq,
        n: uintq,
        q: *mut uintq,
        o: *mut uintq,
    );
}
extern "C" {
    pub fn MCMULN(
        sid: uintq,
        na: uintq,
        a: *mut uintq,
        nc: uintq,
        c: *mut uintq,
        m: *mut uintq,
        n: uintq,
        q: *mut uintq,
        o: *mut uintq,
    );
}
extern "C" {
    pub fn MCDIVN(
        sid: uintq,
        na: uintq,
        a: *mut uintq,
        nc: uintq,
        c: *mut uintq,
        m: *mut uintq,
        n: uintq,
        q: *mut uintq,
        o: *mut uintq,
    );
}
extern "C" {
    pub fn MCPOWN(
        sid: uintq,
        na: uintq,
        a: *mut uintq,
        nc: uintq,
        c: *mut uintq,
        m: *mut uintq,
        n: uintq,
        q: *mut uintq,
        o: *mut uintq,
    );
}
extern "C" {
    pub fn LDA(
        sid: uintq,
        ni: uintq,
        qi: *mut uintq,
        nv: uintq,
        qv: *mut uintq,
        t: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn ADC(
        sid: uintq,
        s: uintq,
        ni: uintq,
        qi: *mut uintq,
        nv: uintq,
        qv: *mut uintq,
        t: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn SBC(
        sid: uintq,
        s: uintq,
        ni: uintq,
        qi: *mut uintq,
        nv: uintq,
        qv: *mut uintq,
        t: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn Hash(sid: uintq, n: uintq, q: *mut uintq, t: *mut ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn TrySeparate1Qb(sid: uintq, qi1: uintq) -> bool;
}
extern "C" {
    pub fn TrySeparate2Qb(sid: uintq, qi1: uintq, qi2: uintq) -> bool;
}
extern "C" {
    pub fn TrySeparateTol(sid: uintq, n: uintq, q: *mut uintq, tol: f64) -> bool;
}
extern "C" {
    pub fn GetUnitaryFidelity(sid: uintq) -> f64;
}
extern "C" {
    pub fn ResetUnitaryFidelity(sid: uintq);
}
extern "C" {
    pub fn SetSdrp(sid: uintq, sdrp: f64);
}
extern "C" {
    pub fn SetNcrp(sid: uintq, ncrp: f64);
}
extern "C" {
    pub fn SetReactiveSeparate(sid: uintq, irs: bool);
}
extern "C" {
    pub fn SetTInjection(sid: uintq, iti: bool);
}
extern "C" {
    pub fn init_qneuron(
        sid: uintq,
        n: uintq,
        c: *mut uintq,
        q: uintq,
        f: uintq,
        a: f64,
        tol: f64,
    ) -> uintq;
}
extern "C" {
    pub fn clone_qneuron(nid: uintq) -> uintq;
}
extern "C" {
    pub fn destroy_qneuron(nid: uintq);
}
extern "C" {
    pub fn set_qneuron_angles(nid: uintq, angles: *mut f32);
}
extern "C" {
    pub fn get_qneuron_angles(nid: uintq, angles: *mut f32);
}
extern "C" {
    pub fn set_qneuron_alpha(nid: uintq, alpha: f64);
}
extern "C" {
    pub fn get_qneuron_alpha(nid: uintq) -> f64;
}
extern "C" {
    pub fn set_qneuron_activation_fn(nid: uintq, f: uintq);
}
extern "C" {
    pub fn get_qneuron_activation_fn(nid: uintq) -> uintq;
}
extern "C" {
    pub fn qneuron_predict(nid: uintq, e: bool, r: bool) -> f64;
}
extern "C" {
    pub fn qneuron_unpredict(nid: uintq, e: bool) -> f64;
}
extern "C" {
    pub fn qneuron_learn_cycle(nid: uintq, e: bool) -> f64;
}
extern "C" {
    pub fn qneuron_learn(nid: uintq, eta: f64, e: bool, r: bool);
}
extern "C" {
    pub fn qneuron_learn_permutation(nid: uintq, eta: f64, e: bool, r: bool);
}
extern "C" {
    pub fn init_qcircuit(collapse: bool, clifford: bool) -> uintq;
}
extern "C" {
    pub fn init_qcircuit_clone(cid: uintq) -> uintq;
}
extern "C" {
    pub fn qcircuit_inverse(cid: uintq) -> uintq;
}
extern "C" {
    pub fn qcircuit_past_light_cone(cid: uintq, n: uintq, q: *mut uintq) -> uintq;
}
extern "C" {
    pub fn destroy_qcircuit(cid: uintq);
}
extern "C" {
    pub fn get_qcircuit_qubit_count(cid: uintq) -> uintq;
}
extern "C" {
    pub fn qcircuit_swap(cid: uintq, q1: uintq, q2: uintq);
}
extern "C" {
    pub fn qcircuit_append_1qb(cid: uintq, m: *mut f64, q: uintq);
}
extern "C" {
    pub fn qcircuit_append_mc(cid: uintq, m: *mut f64, n: uintq, c: *mut uintq, q: uintq, p: uintq);
}
extern "C" {
    pub fn qcircuit_run(cid: uintq, sid: uintq);
}
extern "C" {
    pub fn qcircuit_out_to_file(cid: uintq, f: *mut ::std::os::raw::c_char);
}
extern "C" {
    pub fn qcircuit_in_from_file(cid: uintq, f: *mut ::std::os::raw::c_char);
}
